--- a/res/layout/activity_speed_test_view.xml
+++ b/res/layout/activity_speed_test_view.xml
@@ -2,12 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".SpeedTestViewActivity" >
 
     <com.example.nutandroid.view.GaugeView
         android:id="@+id/gauge"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="0dip"
+        android:layout_weight="1" >
     </com.example.nutandroid.view.GaugeView>
+
+    <Button
+        android:id="@+id/btnGauge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Click" />
 
 </LinearLayout>
